@@ -1,3 +1,7 @@
+2004-12-29  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* exult.cc: don't let avatar move if right clicking on gump to close it
+	  (based on patch #1088000)
+
 2004-12-01    <jeff@mini.nerble.net>
 
 	* mapedit/objedit.cc,etc.:  Added 'rotate' button to obj-edit dialog.
